eka kokeilu, legendaarista

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular": "^1.5.5",
     "bootstrap": "^3.3.6",
     "Ionicons": "ionicons#^2.0.1",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "wad": "1.7.1"
   }
 }
