dependencies for vexflow

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "Ionicons": "ionicons#^2.0.1",
     "font-awesome": "^4.6.3",
     "wad": "1.7.1",
-    "vexflow": "1.2.80",
-    "sinon-chai": "2.8.0"
+    "sinon-chai": "2.8.0",
+    "vexflow": "1.2.79"
   }
 }
