--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,9 @@
     "font-awesome": "^4.6.3",
     "wad": "1.7.1",
     "sinon-chai": "2.8.0",
+    "vexflow": "^1.2.80"
+  },
+  "resolutions": {
     "vexflow": "1.2.79"
   }
 }
