--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TeemuKoivisto/simple-angular-bootstrap.git"
+    "url": "git+https://github.com/ismoaulaskari/music-superhero"
   },
   "author": "Me",
   "license": "ISC",
@@ -25,7 +25,6 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "sinon-chai": "^2.8.0",
-    "vexflow": "^1.2.80"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.7",
